<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideMatch</string>
    <string name="action_settings">Settings</string>  
    <string name="chat_tab">Chat</string>
    <string name="request_tab">Request</string>
    <string name="inbox_tab">Inbox</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="capacity">capacity(including yourself)</string>
    <string name="set_address">Set Address</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="own_a_car">Do you own a car?</string>
    <string name="attend_church">Attend Church</string>
    <string name="change_address">Change Address</string>
    <string name="log_out">Log Out</string>
    <string name="send">Send</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="result_request">Result Request</string>
    <string name="clear">Clear</string>
    <string name="find">Find</string>
    <string name="save">Save</string>
    <string name="address_out_of_range">Can\'t view address! Get closer.</string>
    <string name="powered_by_parse">Powered by Parse</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="karisma">Karisma</string>
    <string name="title">RideMatch</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_realname">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone(not required)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_request">forgot id/password</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_realname">enter a your name</string>
    <string name="error_blank_email">enter a your email</string>
    <string name="error_blank_address">enter an address</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_blank_capacity">enter a capacity</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
	
</resources>
