<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity" >

    <!-- Login form -->

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

       <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/realname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_realname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
          
            <TextView
            	android:id="@+id/address"
           		android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
           	 	android:maxLines="1"
            	android:hint="@string/prompt_address"
            	android:paddingLeft="12dip"
            	android:paddingTop="5dip"
            	android:textSize="16sp"
            	android:textAppearance="?android:attr/textAppearanceSmall">
            	<requestFocus/>
            </TextView>
            
            <TextView
        		android:id="@+id/carView"
				android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:maxLines="1"
        		android:text="@string/own_a_car"
        		android:paddingLeft="12dip"
            	android:paddingTop="5dip"
        		android:textSize="16sp"
        		android:textAppearance="?android:attr/textAppearanceSmall"/>
            
            <RadioGroup
       			android:id="@+id/carGroup"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal" >

        		<RadioButton
            		android:id="@+id/yes"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/Yes" />
        		
        		<RadioButton
           		    android:id="@+id/no"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/No" />
    		</RadioGroup>
    		
            <EditText
               	android:id="@+id/capacity"
                android:layout_width="wrap_content"
               	android:layout_height="wrap_content"
               	android:hint="@string/capacity"
               	android:textSize="16sp"
               	android:inputType="number"
               	android:maxLines="1"
               	android:singleLine="true" />
    		
            <Button
                android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/sign_up" />
        </LinearLayout>
    </ScrollView>

</merge>