<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LoginFormContainer"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own_a_car"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/carOwnerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <RadioButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes" />

        <RadioButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No" />
    </RadioGroup>
    
    <EditText
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capacity"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    
    <TextView
    	android:id="@+id/changeAddress"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
   	 	android:maxLines="1"
    	android:hint="@string/prompt_address"
    	android:paddingLeft="12dip"
    	android:paddingTop="5dip"
    	android:textSize="16sp"
    	android:textAppearance="?android:attr/textAppearanceSmall">
    	<requestFocus/>
    </TextView>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
    	
        <Button
        	android:id="@+id/save"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/save" />
    
    	<Button
        	android:id="@+id/logOutButton"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/save"
        	android:text="@string/log_out" />
    
    </RelativeLayout>

</LinearLayout>