<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/sendView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attend_church"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
        
        <Button
        	android:id="@+id/send_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/send_request" />
    	<Button
        	android:id="@+id/cancel_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/send_button"
        	android:text="@string/cancel_request" />
    </RelativeLayout>
   
</LinearLayout>
