<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogIn" >

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            
            <RelativeLayout
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="right"
        		android:orientation="horizontal" >
        		
                <Button
                	android:id="@+id/request_button"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_marginTop="16dp"
                	
                	android:text="@string/action_request" />

            	<Button
                	android:id="@+id/action_button"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_toRightOf="@id/request_button"
                	android:layout_marginTop="16dp"
                	android:text="@string/action_sign_in_short" />
            
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</merge>